Fix modal size on small screens.

--- a/src/ImportFromZip.module.scss
+++ b/src/ImportFromZip.module.scss
@@ -24,8 +24,10 @@
   }
 }
 
-.importModal > * {
-  // We don't always have enough text content to fill up the modal space
-  // but it's weird for the modal to be changing size all the time.
-  width: var(--bs-modal-width);
+@include media-breakpoint-up(md) {
+  .importModal > * {
+    // We don't always have enough text content to fill up the modal space
+    // but it's weird for the modal to be changing size all the time.
+    width: var(--bs-modal-width);
+  }
 }
